2017-08-03  Michael Wiegand <michael.wiegand@greenbone.net>

	Unify handling of compiler flags to avoid passing the same flag
	multiple times.

	* CMakeLists.txt: Move explanatory comment for flags required by GPGME
	here from nasl/CMakeLists.txt.

	* misc/CMakeLists.txt: Stop setting HARDENING_FLAGS and
	LINKER_HARDENING_FLAGS as they are already set in top-level. Stop
	adding the HARDENING_FLAGS to CMAKE_C_FLAGS_RELEASE a second time,
	they were already added in top-level.

	* nasl/CMakeLists.txt: Stop adding GPGME related flags to
	CMAKE_C_FLAGS, they were already added in top-level. Remove related
	comment as well. Stop adding the HARDENING_FLAGS to
	CMAKE_C_FLAGS_RELEASE a second time, they were already added in
	top-level.

2017-08-03  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Remove -O2 from HARDENING_FLAGS. It is not directly
	related to hardening and having it in HARDENING_FLAGS actually causes
	optimization flags from CMAKE_C_FLAGS_RELEASE to be duplicated or even
	superseded for no good reason.

2017-08-03  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_var.c (get_var_ref_by_name): Check for null parameter.

2017-07-31  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync.in: Re-add period lost in last commit.

2017-08-31  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Drop the HUP signal sending to gvmd by the sync script
	greenbone-nvt-sync. This makes the entire module unaware of
	the Greenbone Vulnerability Manager. The gvmd will on its own decide
	when to load new NVT data from the scanner rather then being triggered
	by the NVT sync script. That mechanism was error-prone anyway as it had
	to find out the PID of gvmd on its own.

	* tools/greenbone-nvt-sync.in: Adjust some comments to explain that
	only OpenVAS Scanner gets a HUP after the sync.
	(update_gvmd): Removed.
	(do_sync): Remove the sleep and the call of update_gvmd().
